[package]
name = "InternetMapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surge-ping = {version = "0.8.0"}
tokio = { version = "1.21.2", features = ["full"] }
reqwest = { version = "0.9.18", features = ["rustls-tls"], default-features = false }#0.9.18 wird gebraucht